--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,7 +44,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #2f2f2f;
+  /* background-color: #2f2f2f; */
   cursor: pointer;
 }
 
