--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,7 +34,7 @@
     transform: scale(1.0);
   }
 }
-
+/*
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -56,15 +56,11 @@
     transform: rotate(360deg);
   }
 }
-
+*/
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
 }
 
 .read-the-docs {
