--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: var(--color-neutral-900);
+  background-color: /*var(--color-neutral-900)*/#0A0A0A;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,7 +23,7 @@ a {
 a:hover {
   color: #535bf2;
 }
-*/
+
 body {
   margin: 0;
   display: flex;
@@ -36,7 +36,7 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+*/
 button {
   border-radius: 8px;
   /*border: 1px solid transparent;*/
