Update colour of highlight hook

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .highlight {
-  background-color: #facc15;
+  background-color: #0098FF;
   padding: 0.1em 0.1em;
   border-radius: 0.25em;
   animation: popIn 0.3s ease forwards;
