--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,7 +19,7 @@
 }
 
 .highlight:hover {
-  background-color: #fbbf24;
+  background-color: #0098FF;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   transform: scale(1.05);
 }
