--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -76,7 +76,7 @@ h1 {
 button {
   /*border: 1px solid transparent;*/
   /* padding: 0.6em 1.2em; */
-  font-size: 1em;
+  /* font-size: 1em; */
   font-family: inherit;
   /* background-color: #2f2f2f; */
   cursor: pointer;
