--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,7 +53,27 @@ input:-webkit-autofill:active {
   }
 }
 
+.input-wrapper {
+  position: relative;
+  width: 100%;
 
+  /* default gray frame */
+  border: 2px solid #262626;
+  border-radius: 0.5rem;
+  transition: background-image 0.3s, border-color 0.3s;
+}
+
+.input-wrapper:focus-within {
+  /* remove the gray border so our gradient peeks through */
+  border-color: transparent;
+
+  /* your gradient border BG */
+  background-image:
+    linear-gradient(#0A0A0A, #0A0A0A),
+    linear-gradient(to bottom right, #7C82FF, #C355F5);
+  background-origin: padding-box, border-box;
+  background-clip: padding-box, border-box;
+}
 
 .toast-success {
   border: 1px solid transparent;
