--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -100,7 +100,7 @@ input:-webkit-autofill:active {
     background-clip: padding-box, border-box;
 }
 
-.input-wrapper {
+.input-wrapper-login {
   position: relative;
   width: 100%;
 
@@ -110,7 +110,7 @@ input:-webkit-autofill:active {
   transition: background-image 0.3s, border-color 0.3s;
 }
 
-.input-wrapper:focus-within {
+.input-wrapper-login:focus-within {
   /* remove the gray border so our gradient peeks through */
   border-color: transparent;
 
@@ -118,6 +118,28 @@ input:-webkit-autofill:active {
   background-image:
     linear-gradient(#0A0A0A, #0A0A0A),
     linear-gradient(to bottom right, #7C82FF, #C355F5);
+  background-origin: padding-box, border-box;
+  background-clip: padding-box, border-box;
+}
+
+.input-wrapper-signup {
+  position: relative;
+  width: 100%;
+
+  /* default gray frame */
+  border: 2px solid #262626;
+  border-radius: 0.5rem;
+  transition: background-image 0.3s, border-color 0.3s;
+}
+
+.input-wrapper-signup:focus-within {
+  /* remove the gray border so our gradient peeks through */
+  border-color: transparent;
+
+  /* your gradient border BG */
+  background-image:
+    linear-gradient(#0A0A0A, #0A0A0A),
+    linear-gradient(to bottom right, #0098FF, #00C5DC);
   background-origin: padding-box, border-box;
   background-clip: padding-box, border-box;
 }
